<resources>
    <string name="app_name">Course</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_as_grid">Show as grid</string>
    <string name="action_show_as_list">Show as list</string>
    <string name="login_username_et">Username</string>
    <string name="login_password_et">Password</string>
    <string name="login_btn">Login</string>
    <string name="create_an_account_text">Create account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="Course_image">Course Image</string>
    <string name="avatar_image_tiny">avatar</string>
    <string name="title_activity_details">DetailsActivity</string>
</resources>
